--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 joblib==1.2.0
-matplotlib==3.7.1
 numpy==1.24.3
 pandas==2.0.1
-seaborn==0.12.2
 streamlit==1.22.0
+scipy>=0.15.1
+scikit-learn>=0.18
